# oneshot

./: .clinerules  .gitignore  2026-01-19_streaming_json_analysis.json  2026-01-19_streaming_json_implementation_complete.json  2026-01-19_streaming_json_implementation_report.md  2026-01-19_streaming_json_investigation_15-13-53.json  2026-01-19_streaming_json_investigation_report.md  2026-01-19_streaming_json_phase1_complete.json  2026-01-19_streaming_json_test_report.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  README.md  demo-direct-executor.sh  demo_activity_formatter.py  demo_direct_executor.py  o  pyproject.toml  requirements-dev.txt  sample-cline-activity.json  test_aider_demo.py  test_aider_executor_interface.py  test_streaming_json_cross_executor.py
.claude/: CLAUDE.md
.gemini/: GEMINI.md
docs/: README.md  architecture.md  claude-activity-json.md  cline-activity-json.md  contributing.md  definition-of-done.md  direct-executor.md  implementation-reference.md  overview.md  possible-todos.md  project-structure.md  streaming-and-state-management.md  templates.md  workflows.md
examples/: demo_gemini_executor.py
planning/: 2026-01-17_18-45-56_commit_uncommitted_documentation_files-plan.md  2026-01-17_21-20-00_test_suite_fixes-plan.md  2026-01-17_21-55-00_address_test_warnings_and_issues-plan.md  2026-01-17_22-15-00_address_remaining_test_warnings-plan.md  2026-01-17_23-16-01_cline_streaming_research_and_experiments-plan.md  2026-01-18_13-48-51_prompt-01-prompt.md  2026-01-18_13-48-51_prompt-02-2-prompt.md  2026-01-18_14-30-00_oneshot_provider_integration-plan.md  2026-01-18_18-10-00_commit_current_work-plan.md  2026-01-18_18-30-20_prompt-02-prompt.md  2026-01-19_10-00-57_prompt-04-prompt.md  2026-01-19_10-04-59_prompt-05-prompt.md  2026-01-19_10-29-00_test_enhanced_prompt_streaming-plan.md  2026-01-19_10-29-22_test_prompt_functionality_comprehensive-plan.md  2026-01-19_10-30-00_complete_prompt_functionality_testing-plan.md  2026-01-19_10-31-00_comprehensive_prompt_functionality_testing-plan.md  2026-01-19_10-31-00_test_prompt_functionality_execution-plan.md  (+28 more)
(+213 files in other folders)
